--- a/.github/workflows/deploy_site.yml
+++ b/.github/workflows/deploy_site.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Build pages
         run: |
           cd builder
-          node ./make_files.js
+          node ./index.js
           
       # run build script
       - name: Build VuePress site
